--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "record.io",
   "version": "0.0.0",
-  "description": "",
+  "description": "Recording video messages via WebRTC",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,5 +20,13 @@
   "bugs": {
     "url": "https://github.com/rjmackay/record.io/issues"
   },
-  "homepage": "https://github.com/rjmackay/record.io"
+  "homepage": "https://github.com/rjmackay/record.io",
+  "dependencies": {
+    "compression": "^1.0.8",
+    "express": "^4.5.0",
+    "fluent-ffmpeg": "^1.7.2",
+    "morgan": "^1.1.1",
+    "serve-static": "^1.3.0",
+    "socket.io": "^1.0.6"
+  }
 }
