--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "debug": "^1.0.2",
     "express": "^4.5.0",
     "fluent-ffmpeg": "^1.7.2",
+    "knox": "^0.9.0",
     "morgan": "^1.1.1",
     "serve-static": "^1.3.0",
     "socket.io": "^1.0.6"
