--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fluent-ffmpeg": "^1.7.2",
     "knox": "^0.9.0",
     "morgan": "^1.1.1",
+    "node-uuid": "^1.4.1",
     "serve-static": "^1.3.0",
     "socket.io": "^1.0.6"
   }
