--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "record.io",
+  "name": "recordly.io",
   "version": "0.0.0",
   "description": "Recording video messages via WebRTC",
   "main": "node ./bin/www",
