Set up grid layout

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "bourbon": "~4.0.2",
-    "neat": "~1.6.0"
+    "neat": "~1.6.0",
+    "font-awesome": "~4.1.0"
   }
 }
