--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "recordly.io",
   "version": "0.0.0",
   "description": "Recording video messages via WebRTC",
-  "main": "node ./bin/www",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
@@ -30,6 +29,7 @@
     "morgan": "^1.1.1",
     "node-uuid": "^1.4.1",
     "serve-static": "^1.3.0",
-    "socket.io": "^1.0.6"
+    "socket.io": "^1.0.6",
+    "bower": "^1.3.8"
   }
 }
