--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Recording video messages via WebRTC",
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "./node_modules/bower/bin/bower install && node ./node_modules/gulp/bin/gulp.js build"
   },
   "repository": {
     "type": "git",
@@ -21,15 +21,19 @@
   },
   "homepage": "https://github.com/rjmackay/record.io",
   "dependencies": {
+    "bower": "^1.3.8",
     "compression": "^1.0.8",
     "debug": "^1.0.2",
     "express": "^4.5.0",
     "fluent-ffmpeg": "^1.7.2",
+    "gulp": "^3.8.6",
+    "gulp-compass": "^1.1.9",
+    "gulp-sass": "^0.7.2",
     "knox": "^0.9.0",
     "morgan": "^1.1.1",
+    "node-sass": "^0.9.3",
     "node-uuid": "^1.4.1",
     "serve-static": "^1.3.0",
-    "socket.io": "^1.0.6",
-    "bower": "^1.3.8"
+    "socket.io": "^1.0.6"
   }
 }
