Gulpfile: add livereload, just beep/log on watch errors

--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "fluent-ffmpeg": "^1.7.2",
     "gulp": "^3.8.6",
     "gulp-compass": "^1.1.9",
+    "gulp-livereload": "^2.1.0",
+    "gulp-plumber": "^0.6.3",
     "gulp-sass": "^0.7.2",
+    "gulp-util": "^2.2.20",
     "knox": "^0.9.0",
     "morgan": "^1.1.1",
     "node-sass": "^0.9.3",
