--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fluent-ffmpeg": "^1.7.2",
     "gulp": "^3.8.6",
     "gulp-compass": "^1.1.9",
+    "gulp-jshint": "^1.7.1",
     "gulp-livereload": "^2.1.0",
     "gulp-plumber": "^0.6.3",
     "gulp-sass": "^0.7.2",
