--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/rjmackay/record.io",
   "dependencies": {
     "bower": "^1.3.8",
+    "brfs": "^1.2.0",
+    "browserify": "^6.1.0",
     "compression": "^1.0.8",
     "debug": "^4.1.1",
     "express": "^4.5.0",
@@ -38,6 +40,8 @@
     "node-sass": "^0.9.3",
     "node-uuid": "^1.4.1",
     "serve-static": "^1.3.0",
-    "socket.io": "^1.0.6"
+    "socket.io": "^1.0.6",
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^2.0.0"
   }
 }
